platform/development/dev-apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo-app
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
